WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171635
Try to fix the macOS Public SDK build
https://bugs.webkit.org/show_bug.cgi?id=171635
Summary
Try to fix the macOS Public SDK build
Andy Estes
Reported
2017-05-03 16:55:15 PDT
Try to fix the macOS Public SDK build
Attachments
Patch
(1.80 KB, patch)
2017-05-03 16:57 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(1.86 KB, patch)
2017-05-03 19:25 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2017-05-03 16:56:16 PDT
rdar://problem/31812751
Andy Estes
Comment 2
2017-05-03 16:57:07 PDT
Created
attachment 308987
[details]
Patch
WebKit Commit Bot
Comment 3
2017-05-03 17:30:52 PDT
Comment on
attachment 308987
[details]
Patch Rejecting
attachment 308987
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 308987, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://webkit-queues.webkit.org/results/3668096
Andy Estes
Comment 4
2017-05-03 19:25:24 PDT
Created
attachment 309004
[details]
Patch
WebKit Commit Bot
Comment 5
2017-05-03 20:08:43 PDT
Comment on
attachment 309004
[details]
Patch Clearing flags on attachment: 309004 Committed
r216170
: <
http://trac.webkit.org/changeset/216170
>
WebKit Commit Bot
Comment 6
2017-05-03 20:08:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug