Try to fix the macOS Public SDK build https://bugs.webkit.org/show_bug.cgi?id=171635 <rdar://problem/31812751>

Unreviewed because the commit queue told me to say this.


* platform/spi/cocoa/AVKitSPI.h:


Canonical link: https://commits.webkit.org/188553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216170 268f45cc-cd09-0410-ab3c-d52691b4dbfc