Source/WebCore/platform/spi/cocoa/AVKitSPI.h
@@ -153,16 +153,19 @@ NS_ASSUME_NONNULL_END
 
 #if PLATFORM(MAC) && ENABLE(WEB_PLAYBACK_CONTROLS_MANAGER)
 
+#if __MAC_OS_X_VERSION_MAX_ALLOWED < 101300
 OBJC_CLASS AVFunctionBarPlaybackControlsProvider;
 OBJC_CLASS AVFunctionBarScrubber;
 OBJC_CLASS AVFunctionBarMediaSelectionOption;
-
-#if __MAC_OS_X_VERSION_MAX_ALLOWED < 101300
 typedef AVFunctionBarMediaSelectionOption AVTouchBarMediaSelectionOption;
 typedef AVFunctionBarPlaybackControlsProvider AVTouchBarPlaybackControlsProvider;
 typedef AVFunctionBarScrubber AVTouchBarScrubber;
 #define AVTouchBarPlaybackControlsControlling AVFunctionBarPlaybackControlsControlling
-#endif // __MAC_OS_X_VERSION_MAX_ALLOWED < 101300
+#else
+OBJC_CLASS AVTouchBarPlaybackControlsProvider;
+OBJC_CLASS AVTouchBarScrubber;
+OBJC_CLASS AVTouchBarMediaSelectionOption;
+#endif
 
 #if USE(APPLE_INTERNAL_SDK)
 #if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101300
